sfa-dms/force-app/main/default/objects/Expense__c/fields/Expense_Source__c.field-meta.xml
<CustomField>
    <fullName>Expense_Source__c</fullName>
    <label>Expense Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>Auto</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>