sfa-dms/force-app/main/default/objects/Expense__c/fields/Has_Receipt__c.field-meta.xml
<CustomField>
    <fullName>Has_Receipt__c</fullName>
    <formula>Receipt_Count__c &gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Receipt</label>
    <type>Checkbox</type>
</CustomField>