sfa-dms/force-app/main/default/objects/Expense__c/fields/Is_Over_Budget__c.field-meta.xml
<CustomField>
    <fullName>Is_Over_Budget__c</fullName>
    <formula>Remaining_Budget__c &lt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Over Budget</label>
    <type>Checkbox</type>
</CustomField>