sfa-dms/force-app/main/default/objects/Expense__c/fields/Rate_Per_Km__c.field-meta.xml
<CustomField>
    <fullName>Rate_Per_Km__c</fullName>
    <label>Rate Per Km</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>