sfa-dms/force-app/main/default/objects/Expense__c/fields/Receipt_Count__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Receipt Count</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>